multi.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alpine-pod
  namespace: ckad-ns2
spec:
  volumes:
    - name: alpine-config
      configMap:
        name: alpine-config
  containers:
    - name: alpine
      image: alpine:3.2
      command:
        - /bin/sh
        - "-c"
        - "echo Hi"
