nginx-exam.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-dep
  labels:
    service: nginx
spec:
  replicas: 5
  selector:
    matchLabels:
      app: webshop

  # All pods should be terminated before creating new ones
  # With brief downtime period
  strategy:
    type: Recreate
  template:
    metadata:
      name: nginx-dep-pod
      labels:
        app: webshop
    spec:
      containers:
        - name: nginx
          image: nginx:1.18
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            limits:
              memory: "64Mi"
              cpu: "250m"
