app-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-dep
  namespace: ckad-ns6
  labels:
    app: app-dep
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-dep
  template:
    metadata:
      name: app-dep-pod
      labels:
        app: app-dep
    spec:
      containers:
        - name: nginx
          image: nginx:1.19
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            limits:
              memory: "64Mi"
              cpu: "250m"

---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: ckad-ns6
spec:
  type: NodePort
  selector:
    app: app-dep
  ports:
    - port: 32000
      targetPort: 80
